fixed the rest of the warnings